config-X11.h.cmake
@@ -1,0 +1,3 @@
+/* Define if you have X11 at all */
+#cmakedefine01 HAVE_X11
+
